--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p style="text-align:right"><a href="sign up.html">sign up</a> </p>
 <table cellspacing=20>
   <tr>
-    <td><img src="C:\Users\NISHAN\Desktop\web dev\images\circle-cropped.png" alt="NISHAN's Profile Picture" width="150" height="150"></td>
+    <td><img src="images\circle-cropped.png" alt="NISHAN's Profile Picture" width="150" height="150"></td>
     <td>  <h1>NISHAN MURARKA</h1>
       <p><em>Student at <strong>IIEST Shibpur</strong> <br>Student at <strong>JADAVPUR UNIVERSITY
           </strong> </em></p></td>
