--- a/Media Handles.html
+++ b/Media Handles.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h3>Social Media Handles:</h3>
-    <a href="https://www.instagram.com/okthenxxbye/">instagram <img src="C:\Users\NISHAN\Desktop\web dev\images\logo-ig-32464.png" alt="instagram" width="20" height="20"> </a>
+    <a href="https://www.instagram.com/okthenxxbye/">instagram <img src="images\logo-ig-32464.png" alt="instagram" width="20" height="20"> </a>
   <br>
-    <a href="https://www.facebook.com/nishan.murarka/">Facebook <img src="C:\Users\NISHAN\Desktop\web dev\images\Facebook-logo.png" alt="" width="30" height="20"> </a>
+    <a href="https://www.facebook.com/nishan.murarka/">Facebook <img src="images\Facebook-logo.png" alt="" width="30" height="20"> </a>
   </body>
 </html>
